--- a/src/locales/en/nav.json
+++ b/src/locales/en/nav.json
@@ -40,12 +40,12 @@
         },
         {
           "text": "Programme",
-          "link": "https://turkmentextile.turkmenexpo.com/app/storage/app/media/agenda/agenda_en.pdf",
+          "link": "",
           "blank": "blank"
         },
         {
           "text": "Travel guide",
-          "link": "https://turkmentextile.turkmenexpo.com/app/storage/app/media/travel_guide/Travel_guide_eng.pdf",
+          "link": "",
           "blank": "blank"
         }
       ]
