--- a/src/locales/en/nav.json
+++ b/src/locales/en/nav.json
@@ -2,7 +2,7 @@
   "navigation": [
     {
       "title": "Travel Guide",
-      "link": "https://turkmentextile.turkmenexpo.com/app/storage/app/media/travel_guide/Travel_guide_eng.pdf",
+      "link": "",
       "blank": "blank"
     },
     {
